# tvm_rocm_cpp

./: CMakeLists.txt  README.md  inference.cc  preprocess.py  tvm_runtime_pack.cc
